Add a dynamic selector that automatically gets the decompile, AND jumps ghidra to the same address

--- a/ghidra_notebook_demo.ipynb
+++ b/ghidra_notebook_demo.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# setup code\n",
-    "import ipywidgets"
+    "import ipywidgets as widgets"
    ]
   },
   {
@@ -51,7 +51,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9a64d44f-ca56-4a4a-9962-72a6c6096752",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# dir will include the attributes and functions of the bridged object in the Ghidra python environment\n",
@@ -70,11 +73,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "795e148e-3e3b-4194-9772-39263aa5eaad",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": [
+     "test"
+    ]
+   },
    "outputs": [],
    "source": [
     "# help will attempt to get the Ghidra documentation if possible\n",
-    "help(currentProgram.getFunctionManager())\n"
+    "help(currentProgram.getFunctionManager())"
    ]
   },
   {
@@ -89,7 +97,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d9287a89-aeff-4fc4-ab79-b234f7cf7f8d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%time list(currentProgram.getFunctionManager().getFunctions(True))"
@@ -107,13 +118,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "defc9315-9b32-42b8-898b-6e9cf48bd026",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# the bridge is available in the globals as \"bridge\". \n",
     "# Note that remote_eval takes a string.\n",
     "%time func_tuple_list = bridge.remote_eval(\"[(func.getEntryPoint().getOffset(), func.getName()) for func in currentProgram.getFunctionManager().getFunctions(True)]\")\n",
-    "func_dict = { f\"{name} ({hex(address)})\": (address, name) for address, name in func_tuple_list}"
+    "func_dict = { f\"{name} ({hex(address)})\": (address, name) for address, name in func_tuple_list}\n",
+    "func_dict"
    ]
   },
   {
@@ -131,10 +146,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dropD = ipywidgets.widgets.Dropdown(\n",
+    "dropD = widgets.Dropdown(\n",
     " options=sorted(func_dict.keys()),\n",
     " description=\"Function name:\",\n",
     " disabled=False,\n",
+    " style={'description_width': 'initial'}\n",
     " )\n",
     "display(dropD)"
    ]
@@ -154,18 +170,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function_address = func_dict[dropD.value][0]\n",
-    "function = currentProgram.getFunctionManager().getFunctionAt(currentProgram.parseAddress(hex(function_address))[0])\n",
+    "def getAddress(program, hex_address):\n",
+    "    return program.parseAddress(hex_address)[0]    \n",
     "\n",
+    "def getFunctionByEntrypoint(program, entrypoint_address):\n",
+    "    return program.getFunctionManager().getFunctionAt(entrypoint_address)\n",
+    "\n",
+    "# note that you can just remotely import across the bridge\n",
+    "# imports will try to fulfill locally first, then check a bridge with the import hook set to try to find something that can fulfill it remotely.\n",
     "from ghidra.app.decompiler import DecompInterface\n",
     "from ghidra.util.task import ConsoleTaskMonitor\n",
     "\n",
-    "ifc = DecompInterface()\n",
-    "ifc.openProgram(currentProgram)\n",
+    "def getFunctionDecompile(function):\n",
+    "    ifc = DecompInterface()\n",
+    "    ifc.openProgram(function.getProgram())\n",
     "\n",
-    "# decompile the function and print the pseudo C\n",
-    "results = ifc.decompileFunction(function, 0, ConsoleTaskMonitor())\n",
-    "print(results.getDecompiledFunction().getC())\n"
+    "    # decompile the function and print the pseudo C\n",
+    "    results = ifc.decompileFunction(function, 0, ConsoleTaskMonitor())\n",
+    "    return results.getDecompiledFunction().getC()\n",
+    "\n",
+    "function_address = hex(func_dict[dropD.value][0])\n",
+    "print(getFunctionDecompile(getFunctionByEntrypoint(currentProgram, getAddress(currentProgram, function_address))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "015819c3-c113-4302-a511-aa3e6bba0b43",
+   "metadata": {},
+   "source": [
+    "Hmm, can we be even more interactive? What about automatically updating the decompile when the user changes the selection? And also jumping Ghidra to that location?!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3478d54c-bc58-44a5-9022-9868b3efb0d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropD2 = widgets.Dropdown(\n",
+    " options=sorted(func_dict.keys()),\n",
+    " description=\"Function name:\",\n",
+    " disabled=False,\n",
+    " style={'description_width': 'initial'}\n",
+    " )\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "display(dropD2, output)\n",
+    "\n",
+    "def on_value_change(change):\n",
+    "    # callback handler\n",
+    "    output.clear_output()\n",
+    "    with output:\n",
+    "        function_address = hex(func_dict[change['new']][0])\n",
+    "        addr = getAddress(currentProgram, function_address)\n",
+    "        print(getFunctionDecompile(getFunctionByEntrypoint(currentProgram, addr)))\n",
+    "        state.setCurrentAddress(addr)\n",
+    "        print(\"!! Go look at this in your Ghidra window!\")\n",
+    "\n",
+    "# register the callback to update when the user changes the value in the dropdown\n",
+    "dropD2.observe(on_value_change, names='value')\n",
+    "\n",
+    "# trigger on_value_change to the first value, as if the user had selected it alread\n",
+    "on_value_change({\"new\": dropD2.options[0]})"
    ]
   }
  ],
@@ -181,7 +248,10 @@
    "mimetype": "text/x-python3",
    "name": "Ghidra Python",
    "pygments_lexer": "python3"
-  }
+  },
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false,
+  "toc-showtags": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
